--- a/1.2 Home.html
+++ b/1.2 Home.html
@@ -46,15 +46,15 @@
 						<h1>M E N U</h1>
 						<ul>
 							<li><strong>Home</strong></a></li>
-							<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
-							<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
-							<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
-							<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
-							<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
-							<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-							<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
-							<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel project)</a></li>
-							<li><a href="2.1.2 Seafood.html">- Seafood (Report overview)</a></li>
+							<li><a href="2.9.2 Lunch.html">- Lunch (Power Automate, Power Apps and Power BI)</a></li>
+							<li><a href="2.8.2 Demographics.html">- Demographics (Power BI)</a></li>
+							<li><a href="2.7.2 Apple.html">- Apple (Power BI)</a></li>
+							<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI)</a></li>
+							<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python)</a></li>
+							<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI)</a></li>
+							<li><a href="2.3.2 Icecold.html">- Icecold (Qlik)</a></li>
+							<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel)</a></li>
+							<li><a href="2.1.2 Seafood.html">- Seafood (-)</a></li>
 						</ul>
 					</nav>
 
@@ -174,22 +174,22 @@
 				<div class="inner">
 					<section>
 						<h2>About me</h2>
-						<img src="images/profilbilde.jpg" alt="" height="250" width="212" ALIGN="right" /><p style="font-size:16px">Hi! My name is Marco, I am 30 years old, born and raised in the Netherlands and living in Oslo, Norway. I hold a double bachelor's degree, one in international marketing and one in economics and administration, and in 2018 I graduated from the Norwegian School of Economics (NHH) with an Master in Economics and Business Administration. In recent years, I have specialized myself in the field of data analysis through online studies such as Google's Data Analytics Specialization (Coursera, 250+ hours). On a daily basis, I work as a market analyst in Bane NOR and I work on some side projects as a Power BI developer. </p>
+						<img src="images/profilbilde.jpg" alt="" height="250" width="212" ALIGN="right" /><p style="font-size:16px">Hi! My name is Marco, I am 32 years old, born and raised in the Netherlands and living in Oslo, Norway. I hold a double bachelor's degree, one in international marketing and one in economics and administration, and in 2018 I graduated from the Norwegian School of Economics (NHH) with a Master in Economics and Business Administration. In recent years, I have specialized myself in the field of business intelliggence and data analysis through online studies such as Google's Data Analytics Specialization (Coursera, 250+ hours). On a daily basis, I work as a BI consultant in Oseberg Solutions and I work on some side projects as a Power BI developer. </p>
 						<img height="32" src="images/Linkedin.png" alt="" ALIGN="left"/><p style="font-size:16px" style="line-height:2.2">&nbsp;&nbsp;Feel free to contact me on <a href="https://www.linkedin.com/in/marco-peters-680a48130/"><b>LinkedIn</b></a>.</p>
 						<div class="field">
 							<textarea></textarea>
 						</div>
 					</section>
 					<section>
-					<h2>Skills</h2>
+					<h2>Key skills</h2>
 					<div>
 						<div class="box" style="padding:10px">
 						<div style="float: left">
 							<img style src="images/wordicon3.png" height="60" />
 						</div>
 						<div>
-							<b style="font-size:14px">&nbsp;Data processing and analysis</b> 
-							<p style="font-size:12px">&nbsp;Good decisions require good questions and good data.</p>
+							<b style="font-size:14px">&nbsp;Business acumen</b> 
+							<p style="font-size:12px">&nbsp;Making good decisions starts with understanding the challenges and asking the right questions.</p>
 						</div>
 						</div>
 					</div>
@@ -199,8 +199,8 @@
 							<img style src="images/wordicon2.png" height="60" />
 						</div>
 						<div>
-							<b style="font-size:14px">&nbsp;Data visualization</b> 
-							<p style="font-size:12px">&nbsp;Good visualizations get the point across within 10 seconds.</p>
+							<b style="font-size:14px">&nbsp;Data Processing and Analysis</b> 
+							<p style="font-size:12px">&nbsp;Data is just text and numbers - processing and analyzing this data is what makes it valuable.</p>
 						</div>
 						</div>
 					</div>
@@ -210,8 +210,8 @@
 							<img style src="images/wordicon10.png" height="60" />
 						</div>
 						<div>
-							<b style="font-size:14px">&nbsp;Presenting data</b> 
-							<p style="font-size:12px">&nbsp;A good report or presentation uses data to tell a story.</p>
+							<b style="font-size:14px">&nbsp;Power BI</b> 
+							<p style="font-size:12px">&nbsp;Power Platform turns complex data into valuable and visable insights and data-driven decisions.</p>
 						</div>
 						</div>
 					</div>
