--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 						<h1>M E N Y</h1>
 						<ul>
 							<li><strong>Hjem</strong></a></li>
-							<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
-							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
-							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
-							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
-							<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python prosjekt)</a></li>
-							<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI prosjekt)</a></li>
-							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
-							<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
-							<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
+							<li><a href="2.9.1 Lunsj.html">- Lunsj (Power Automate, Power Apps og Power BI)</a></li>
+							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI)</a></li>
+							<li><a href="2.7.1 Apple.html">- Apple (Power BI)</a></li>
+							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI)</a></li>
+							<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python)</a></li>
+							<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI)</a></li>
+							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik)</a></li>
+							<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel)</a></li>
+							<li><a href="2.1.1 Sjomat.html">- Sjømat (-)</a></li>
 						</ul>
 					</nav>
 
@@ -174,14 +174,25 @@
 						<div class="inner">
 							<section>
 								<h2>Om meg</h2>
-								<img src="images/profilbilde.jpg" alt="" height="250" width="212" ALIGN="right" /><p style="font-size:16px">Hei! Jeg heter Marco, jeg er 30 år, født og oppvokst i Nederland og bosatt i Oslo. Jeg har én bachelor i internasjonal markedsføring og én i økonomi og administrasjon, og i 2018 ble jeg ferdig utdannet siviløkonom fra Norges Handelshøyskole. De siste årene har jeg spesialisert meg i dataanalyse gjennom nettbaserte kurs som Google sin Data Analytics Specialization (Coursera, 250+ timer). Til daglig jobber jeg som markedsanalytiker i Bane NOR og holder jeg på med noen prosjekter som selvstendig Power BI utvikler. </p>
+								<img src="images/profilbilde.jpg" alt="" height="250" width="212" ALIGN="right" /><p style="font-size:16px">Hei! Jeg heter Marco, jeg er 32 år, født og oppvokst i Nederland og bosatt i Oslo. Jeg har en dobbel bachelorgrad (økonomi og administrasjon + internasjonal markedsføring), og i 2018 ble jeg ferdig utdannet siviløkonom fra Norges Handelshøyskole. De siste årene har jeg spesialisert meg i dataanalyse og BI, blant annet gjennom nettbaserte kurs som Google sin Data Analytics Professional Certificate (Coursera, 250+ timer). Til daglig jobber jeg som forretningskonsulent BI i Oseberg Solutions og jobber jeg med noen prosjekter som selvstendig Power BI utvikler. </p>
 								<img height="32" src="images/Linkedin.png" alt="" ALIGN="left"/><p style="font-size:16px" style="line-height:2.2">&nbsp;&nbsp;Ta gjerne kontakt med meg på <a href="https://www.linkedin.com/in/marco-peters-680a48130/"><b>LinkedIn</b></a>.</p>
 								<div class="field">
 									<textarea></textarea>
 								</div>
 							</section>
 							<section>
-							<h2>Ferdigheter</h2>
+							<h2>Nøkkelferdigheter</h2>
+							<div>
+								<div class="box" style="padding:10px">
+								<div style="float: left">
+									<img style src="images/wordicon10.png" height="60" />
+								</div>
+								<div>
+									<b style="font-size:14px">&nbsp;Forretningsforståelse</b> 
+									<p style="font-size:12px">&nbsp;Gode beslutninger starter med gode spørsmål og en riktig forståelse av utfordringene.</p>
+								</div>
+								</div>
+							</div>
 							<div>
 								<div class="box" style="padding:10px">
 								<div style="float: left">
@@ -189,7 +200,7 @@
 								</div>
 								<div>
 									<b style="font-size:14px">&nbsp;Databehandling og analyse</b> 
-									<p style="font-size:12px">&nbsp;Gode beslutninger starter med gode spørsmål og et godt datagrunnlag.</p>
+									<p style="font-size:12px">&nbsp;Data er bare tekst og tall – databehandling og analyse er broen mellom data og handling.</p>
 								</div>
 								</div>
 							</div>
@@ -199,19 +210,8 @@
 									<img style src="images/wordicon2.png" height="60" />
 								</div>
 								<div>
-									<b style="font-size:14px">&nbsp;Datavisualisering</b> 
-									<p style="font-size:12px">&nbsp;Gode visualiseringer gir en forståelse av dataen på under 10 sekunder.</p>
-								</div>
-								</div>
-							</div>
-							<div>
-								<div class="box" style="padding:10px">
-								<div style="float: left">
-									<img style src="images/wordicon10.png" height="60" />
-								</div>
-								<div>
-									<b style="font-size:14px">&nbsp;Rapportering</b> 
-									<p style="font-size:12px">&nbsp;En god rapport eller presentasjon bruker dataen til å fortelle en historie.</p>
+									<b style="font-size:14px">&nbsp;Power BI</b> 
+									<p style="font-size:12px">&nbsp;Power BI gjør kompleks data om til verdifull innsikt og datadrevne beslutninger.</p>
 								</div>
 								</div>
 							</div>
